--- a/templates/server_detail.html
+++ b/templates/server_detail.html
@@ -71,7 +71,7 @@
     </label>
 
     <label class="flex flex-col">
-      {{ t("plex_token") }}
+      {{ t("server_token") }}
       <input type="text" name="token" value="{{ server.token or '' }}"
              class="mt-1 bg-slate-950 border border-slate-800 rounded-lg px-3 py-2 font-mono text-xs">
     </label>
