--- a/templates/settings.html
+++ b/templates/settings.html
@@ -141,7 +141,7 @@
                     </label>
                     <input type="number" min="0"
                            name="preavis_days"
-                           value="{{ preavis_days }}"
+                           value="{{ settings.preavis_days }}"
                            class="w-full bg-slate-800 border border-slate-700 rounded px-3 py-2 text-sm">
                 </div>
 
@@ -152,7 +152,7 @@
                     </label>
                     <input type="number" min="0"
                            name="relance_days"
-                           value="{{ relance_days }}"
+                           value="{{ settings.reminder_days }}"
                            class="w-full bg-slate-800 border border-slate-700 rounded px-3 py-2 text-sm">
                 </div>
 
