--- a/templates/mailing_templates.html
+++ b/templates/mailing_templates.html
@@ -4,6 +4,14 @@
 {% block title %}{{ t("mailing") }} - VODUM{% endblock %}
 {% block header_title %}{{ t("mailing") }}{% endblock %}
 {% block header_subtitle %}{{ t("mailing_subtitle") }}{% endblock %}
+{% set smtp_ready =
+      settings.mailing_enabled
+  and settings.smtp_host
+  and settings.smtp_port
+  and settings.smtp_user
+  and settings.smtp_pass
+  and settings.mail_from
+%}
 
 {% block header_actions %}
     {% if settings.mailing_enabled %}
@@ -96,8 +104,18 @@
         {% if tpl.type != "fin" %}
         <div>
           <label class="block mb-1 text-slate-400">{{ t("days_before_expiration") }}</label>
-          <input type="number" name="days_before_{{ tpl.id }}" value="{{ tpl.days_before }}"
-                 class="w-24 bg-slate-950 border border-slate-800 rounded-lg px-2 py-1 text-xs">
+            {% if tpl.type == "preavis" %}
+			<input type="number"
+				   name="preavis_days"
+				   value="{{ settings.preavis_days }}"
+				   class="w-24 bg-slate-950 border border-slate-800 rounded-lg px-2 py-1 text-xs">
+			{% elif tpl.type == "relance" %}
+			<input type="number"
+				   name="reminder_days"
+				   value="{{ settings.reminder_days }}"
+				   class="w-24 bg-slate-950 border border-slate-800 rounded-lg px-2 py-1 text-xs">
+			{% endif %}
+
         </div>
         {% endif %}
       </div>
