--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>{% block title %}VODUM{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icon.png') }}">
+	<link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='icon.png') }}">
+	<link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='icon.png') }}">
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
